[package]
name = "GameOfLife"
version = "0.1.0"
edition = "2021"

[dependencies]
sycamore = "0.8.1"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

[lib]
crate-type = ["cdylib", "rlib"]